--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "student-marklist",
-  "main": "index.js",
+  "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node main.js "
+    "server": "nodemon main.js ",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gokul",
   "license": "ISC",
