--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon main.js ",
+    "start": "nodemon main.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gokul",
